# CranioScan3D

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/: clinical.yaml  default.yaml  fast.yaml
docs/: capture-protocol.md  decisions.md  landmark-definitions.md  pipeline-architecture-justification.md
scripts/: capture_guide.md  run_quick_test.sh  setup_mac.sh
src/cranioscan/: __init__.py  config.py  pipeline.py
src/cranioscan/extraction/: __init__.py  frame_extractor.py
src/cranioscan/gui/: __init__.py  landmark_gui.py
src/cranioscan/landmarks/: __init__.py  curvature.py  detector.py
src/cranioscan/measurement/: __init__.py  cranial_indices.py  report.py
src/cranioscan/mesh/: __init__.py  processing.py  scale.py
src/cranioscan/reconstruction/: __init__.py  dense.py  sparse.py  undistort.py
src/cranioscan/utils/: __init__.py  io.py  logging.py  shell.py  validation.py
tests/: __init__.py  conftest.py  test_cranial_indices.py  test_frame_extractor.py  test_mesh_processing.py  test_scale.py  test_validation.py
