[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cranioscan3d"
version = "0.1.0"
description = "3D cranial reconstruction and measurement pipeline for craniosynostosis screening"
requires-python = ">=3.10"
authors = [{ name = "CranioScan3D Authors" }]
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "open3d>=0.18",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "PyQt5>=5.15",
    "Pillow>=10.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
cranioscan = "cranioscan.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
